# scoop-proxy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  excavator.yml  issue_comment.yml  issues.yml  pull_request.yml  schedule.yml
bucket/: 010editor.json  0ad.json  0xProto-NF-Mono.json  0xProto-NF-Propo.json  0xProto-NF.json  0xProto.json  10x-np.json  115.json  115chrome.json  123pan.json  163MusicLyrics-lite-6.5.json  163MusicLyrics-pro-6.5.json  163MusicLyrics.json  1Remote-Portable.json  1by1-Portable.json  1by1.json  1history.json  1password-cli.json  1password-cli1.json  1remote.json  2345pic.json  2ship2harkinian.json  3270-NF-Mono.json  3270-NF-Propo.json  3270-NF.json  360Chrome.json  360NetRepair.json  360zip.json  3body-lang.json  3d-fix-manager.json  3dtile.json  3proxy.json  3rvx.json  4KSlideshowMaker-Install.json  4KSlideshowMaker-Portable.json  4KVideoDownloader-Install.json  4KVideoDownloader-Portable.json  4KVideoDownloaderPlus-Install.json  4KVideoDownloaderPlus-Portable.json  4dnat.json  (+12206 more)
bucket/a/: audacity_installer.json
scripts/: AppsUtils.psm1  DisplayCal-SchTasks.ps1  Get-LatestGitHubActionLog.ps1  InstallAllPortableApps.ps1  ModifyPSProfile.psm1  README.md  S4Utils.psm1  blockthespot.ps1  check-update.ps1  gen-readme.ps1  get-spotify-path.ps1  init-spicetify-config-and-apply.ps1  init-spicetify-config.ps1  install-python-package.ps1  logitech-options-install.ahk  migrate-python-packages.ps1  pyshim.ps1  spicetify-apply.ps1  spicetify-disable-devtool.ps1  spicetify-enable-devtool.ps1  uninstall-python-package.ps1
scripts/7-zip/: install-context.reg  uninstall-context.reg
scripts/ClashforWindows/: update-firewall-rules.ps1
scripts/Scoop/: install.ps1  installAsAdmin.ps1  postinstall.ps1
scripts/Scoop-Core/: install.ps1  installAsAdmin.ps1
scripts/WinBox-v4/: update-firewall-rules.ps1
scripts/_deprecated/: flutter-dev-setup.ps1
scripts/alacritty/: install-context.reg  uninstall-context.reg
scripts/bee/: beesvc.cmd
scripts/beyondcompare4/: install-context-32bit.reg  install-context-64bit.reg  uninstall-context.reg
scripts/clashn/: create-scheduled-task.ps1  delete-scheduled-task.ps1  start-clashn.ps1
(+114 files in other folders)
