[project]
name = "sync"
version = "1.0.0"
description = "自动同步其他仓库的bucket清单"
requires-python = "==3.14.4"
dependencies = ["gitpython==3.1.49"]

[dependency-groups]
dev = [
    "python-dotenv==1.2.2",
    "ruff==0.15.12",
    "ty==0.0.34",
    "types-requests==2.33.0.20260503",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sync"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (error)
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # bugbear
    "C",   # flake8-comprehensions
    "SIM", # flake8-simplify
    "I",   # isort
    "UP",  # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF",
    "S",   # flake8-bandit
]

ignore = ["C901", "E501", "S311"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
